# python-project-cli

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: deploy.yaml  main_release.yaml  release.yaml  tests.yaml
src/: main.py
src/divide/: divide_by_three.py
src/multiply/: multiply_by_three.py
src/python_project_cli/: main.py
src/python_project_cli/divide/: __init__.py  divide_by_three.py  divide_by_two.py
src/python_project_cli/multiply/: __init__.py  multiply_by_three.py
tests/: conftest.py  test_divide_by_three.py  test_main.py  test_multiply_by_three.py
