[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python_project_cli"
version = "0.0.3"
authors = [
  { name="alexandermentormate", email="alexander.bozhkov@mentormate.com" },
]
description = "CLI for building base djang and fastapi based projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MentorMate/python-project-cli"
