[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python_project_cli"
version = "0.0.4"
authors = ["alexandermentormate"]
description = "CLI for building base djang and fastapi based projects"
readme = "README.md"
homepage = "https://github.com/MentorMate/python-project-cli/"
repository = "https://github.com/MentorMate/python-project-cli/"
classifiers = [
    "Programming Language :: Python :: 3:: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [{ include = "python_project_cli", from = "src" }]

[tool.poetry.urls]
"Changelog" = "https://github.com/MentorMate/python-project-cli/blob/development/CHANGELOG.md"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "development"
upload_to_pypi = true
upload_to_release = true
major_on_zero = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flake8 = "^7.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pre-commit = "^3.5.0"
python-semantic-release = "^9.4.1"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
tox = "^4.14.2"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[tool.flake8]
max-line-length = 120
